rm: 删除谷歌埋点

--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>懒人客服</title>
+  <script defer src="https://anl.wizgadg.top/script.js" data-website-id="eb4d2b94-6054-454d-8369-d4f443f75a99"></script>
 </head>
 
 <body>
