feat: 迁移目录结构

--- a/src/renderer/main-window/App.css
+++ b/src/renderer/main-window/App.css
@@ -14,7 +14,7 @@ body {
 
 @font-face {
   font-family: 'zhFont';
-  src: url('../../assets/fonts/庞门正道标题体.ttf') format('truetype');
+  src: url('../../../assets/fonts/庞门正道标题体.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
