--- a/src/renderer/settings-window/index.ejs
+++ b/src/renderer/settings-window/index.ejs
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="script-src 'self' 'unsafe-inline'"
-    />
-    <title>Settings Renderer</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>懒人客服设置</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
